--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Library to generate OpenDocument Spreadsheet documents.
 Example
 =======
 
-  sheet = Spreadhseet::Builder.new
+  sheet = Spreadsheet::Builder.new
   sheet.spreadsheet do
     sheet.table 'Time report (simple)' do
       sheet.row {
@@ -18,22 +18,21 @@ Example
         sheet.cell 2.0
       }
     end
-    
+  
     sheet.table 'Time report (rich)' do
-      sheet.column :width => '8in'
-      sheet.column :width => '2in'
-      
+      sheet.column :width => '4in'
+      sheet.column :width => '0.5in'
+    
       sheet.header {
         sheet.row {
-          sheet.cell 'Time report', :span => 2, :class => 'title'
+          sheet.cell 'Time report', :span => 2, :style => 'title'
         }
-        sheet.row # empty row
         sheet.row {
           sheet.cell 'Activity', :align => :left
           sheet.cell 'Hours'
         }
       }
-      
+    
       sheet.row {
         sheet.string_cell 'Developing spreadsheet library'
         sheet.numeric_cell 80.0
@@ -44,7 +43,7 @@ Example
       }
     end
   end
-  
+
   File.open('time_report.ods', 'wb') { |f| f.write sheet.content! }
 
 
